<resources>
    <string name="app_name">workoutbuddy</string>
    <string name="favExercisesTab">Exercises</string>
    <string name="favWorkoutsTab">Workouts</string>
    <string name="exercise_image">exerciseImage</string>
    <string name="description_exercise_image">image of exercise</string>
    <string name="workout_name">Line 1</string>
    <string name="workout_cat">Line 2</string>
    <string name="exerciseName">Line 1</string>
    <string name="exerciseType">Line 2</string>
    <string name="home_view">Home View</string>
    <string name="user_view">User View</string>
    <string name="favorites_view">Favorites View</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="workouts">Workouts</string>
    <string name="user">User</string>
    <string name="content_desc">TODO</string>
    <string name="description_workout_image">image of workout</string>
    <string name="workout_image">workoutImage</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Log In</string>
    <string name="sign_up">New here?</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="welcome_text1">Hello there!</string>
    <string name="signup_text_view">Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="confirm_password">confirm password</string>
    <string name="create_password">create password</string>
    <string name="enter_username">enter username</string>
    <string name="create_new_user">Sign Up</string>
    <string name="exercisetype">Exercise Type</string>
    <string name="chestEx">Chest/Back</string>
    <string name="tricepsEx">Triceps/Biceps</string>
    <string name="exNameHint">Exercise Name</string>
    <string name="shouldersEx">Shoulders</string>
    <string name="glutesEx">Glutes</string>
    <string name="create_new_exercise">Create New Exercise</string>
    <string name="quadricepsEx">Quadriceps/Hamstring</string>
    <string name="coreEx">Core</string>
    <string name="add_exercise_description_here">Description</string>
    <string name="welcome_text2">Login to continue.</string>
    <string name="add_new_exercise">Add New Exercise</string>
    <string name="calves">Calves</string>
    <string name="dismiss">Dismiss</string>
    <string name="pullups">Pullups</string>
    <string name="_5_exercises_3_sets">5 exercises - 3 sets</string>
    <string name="description">Description</string>
    <string name="wNameTV">Ab Circuit</string>
    <string name="startWorkoutButton">Start Workout !</string>
    <string name="end_workout">END WORKOUT</string>
</resources>