<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--defines each menu item with an id, icon, and title-->
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

<!--    <item-->
<!--        android:id="@+id/navigation_favorite"-->
<!--        android:icon="@drawable/ic_baseline_favorite_24"-->
<!--        android:title="@string/favorites" />-->

    <item
        android:id="@+id/navigation_workout"
        android:icon="@drawable/ic_baseline_fitness_center_24"
        android:title="@string/workouts" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/user" />

</menu>