<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewExerciseActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="69dp"
        android:gravity="center"
        android:paddingTop="16dp"
        android:text="@string/add_new_exercise"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/descriptionEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <Space
            android:layout_width="1dp"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/exNameHint"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/exTypeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingTop="16dp"
            android:text="@string/exercisetype"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18dp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="374dp"
            android:layout_height="315dp"
            android:paddingVertical="8dp"
            android:paddingLeft="24dp">

            <CheckBox
                android:id="@+id/chestExButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chestEx" />

            <CheckBox
                android:id="@+id/backExButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/backEx" />

            <CheckBox
                android:id="@+id/tricepsExButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tricepsEx" />

            <CheckBox
                android:id="@+id/bicepsExButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bicepsEx" />

            <CheckBox
                android:id="@+id/shouldersExButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shouldersEx" />

            <CheckBox
                android:id="@+id/glutesExButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/glutesEx" />

            <CheckBox
                android:id="@+id/quadsExButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quadricepsEx" />

            <CheckBox
                android:id="@+id/hamsExButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hamstringsEx" />

            <CheckBox
                android:id="@+id/coreExButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coreEx" />
        </RadioGroup>

        <Space
            android:layout_width="1dp"
            android:layout_height="40dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="374dp"
        android:layout_height="71dp"
        android:layout_marginBottom="108dp"
        android:autofillHints=""
        android:background="@drawable/rectangle_outline"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/add_exercise_description_here"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/createNewExerciseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button"
        android:text="@string/create_new_exercise"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>