<?xml version="1.0" encoding="utf-8"?><!--Design for each workout item. Includes an image, main heading, subheading, and favorite button-->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp">

    <RelativeLayout
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:padding="4dp">

        <ImageView
            android:id="@+id/workoutImage"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/description_workout_image"
            android:src="@drawable/ic_baseline_image_24" />

        <TextView
            android:id="@+id/workoutName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/workoutImage"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-32dp"
            android:paddingTop="5dp"
            android:text="@string/workout_name"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/workoutCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@string/workout_image"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/workout_cat"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:background="#ffffff"
            android:src="@drawable/ic_baseline_favorite_border_24" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>